# lis2dh12-spi

./: Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs  non_blocking.rs  reg.rs
